src/objects/Zuora__Subscription__c.object
<CustomObject>
    <fields>
        <fullName>IT_Cod_Cli_Padre__c</fullName>
        <label>Cod_Cli_Padre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Financial_Center__c</fullName>
        <label>Financial Center Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_WelfareProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Welfare Project</label>
        <referenceTo>IT_Welfare_Project__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Welfare_Project__c</fullName>
        <label>Z_Welfare_Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>